fix alignment

--- a/src/blocks/media/scss/_content.scss
+++ b/src/blocks/media/scss/_content.scss
@@ -2,10 +2,6 @@
 	position: relative;
 	z-index: 2;
 
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-
 	padding: var(--novablocks-media-content-padding);
 
 	color: var(--novablocks-media-text-color);
