--- a/src/components/alignment-controls/_style.scss
+++ b/src/components/alignment-controls/_style.scss
@@ -2,29 +2,17 @@
 	display: flex;
 
 	.novablocks-u-halign-left & {
-		justify-content: flex-start;
+		align-items: flex-start;
 		text-align: left;
 	}
 
 	.novablocks-u-halign-center & {
-		justify-content: center;
+		align-items: center;
 		text-align: center;
 	}
 
 	.novablocks-u-halign-right & {
-		justify-content: flex-end;
-		text-align: right;
-	}
-
-	.novablocks-u-valign-top & {
-		align-items: flex-start;
-	}
-
-	.novablocks-u-valign-center & {
-		align-items: center;
-	}
-
-	.novablocks-u-valign-bottom & {
 		align-items: flex-end;
+		text-align: right;
 	}
 }
